# arwn

./: .gitignore  .travis.yml  AGENTS.md  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  PACKAGING.md  README.md  README.rst  config.yml.sample  install.sh  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  tox.ini~  travis_pypi_setup.py
.github/workflows/: ci.yml  release.yml
arwn/: __init__.py  arwn.py  engine.py  handlers.py  temperature.py
arwn/cmd/: collect.py  install_service.py
arwn/data/: arwn.service.template
arwn/device/: acurite5n1.py
arwn/sensor/: acurite5n1.py  acurite_tower.py  sensor.py  sensor_factory.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/superpowers/plans/: 2026-04-25-mqtt-sim-broker.md
docs/superpowers/specs/: 2026-04-25-mqtt-sim-broker-design.md  2026-04-26-systemd-user-service-design.md
etc/: arwn-daemon
tests/: arwn_fixtures.py  broker.py  conftest.py  mqtt_broker.py  paho_test.py  test_arwn.py  test_arwn_collect.py  test_engine.py  test_engine_integration.py  test_handlers.py  test_install_service.py  test_mqtt.py  test_mqtt_real.py  test_sim_broker.py  test_sim_broker_fixture.py
